Use \cvlistitem instead of \item

--- a/anthony_oteri.tex
+++ b/anthony_oteri.tex
@@ -190,32 +190,20 @@ Designed and implemented an MSP-430 based door lock controller and software key 
 
 \subsection{Programming Languages}
 
-\cvitem{}
-{
-\begin{itemize}
-\item Python, 2 and 3
-\item Java (EJB, Spring MVC, Hibernate)
-\item C and C++
-\item Perl
-\item Bash / Shell Scripting
-\item Some experience with: Groovy, JavaScript, C\#, PHP.
-\end{itemize}
-}
+\cvlistdoubleitem{Python, 2 and 3}{Java (EJB, Spring MVC, Hibernate)}
+\cvlistdoubleitem{C and C++}{Perl}
+\cvlistdoubleitem{Bash / Shell Scripting}{Some experience with Groovy, JavaScript, C\#, PHP.}
 
 \subsection{Software and Tooling}
 
-\cvitem{}
-{
-\begin{itemize}
-\item Red Hat and Debian based Linux
-\item Version Control: Git, Subversion, CVS, and Perforce
-\item Linux Containers Frameworks: Docker and LXC
-\item Databases: MySQL / MariaDB, Microsoft SQL Server, Elasticsearch, Cassandra
-\item Virtualization platforms and tools: KVM, VMware, OpenStack, VirtualBox, OpenNebula, and Vagrant
-\item Continuous Integration and tools: Jenkins, Github.
-\item CMake / GMake, ELK Stack, Grails, HLS and Smooth, Kafka, \LaTeXe, Markdown, RTSP, XSLT, Zookeeper
-\end{itemize}
-}
+\cvlistitem{Red Hat and Debian based Linux}
+\cvlistitem{Version Control: Git, Subversion, CVS, and Perforce}
+\cvlistitem{Linux Containers Frameworks: Docker and LXC}
+\cvlistitem{Databases: MySQL / MariaDB, Microsoft SQL Server, Elasticsearch, Cassandra}
+\cvlistitem{Virtualization platforms and tools: KVM, VMware, OpenStack, VirtualBox, OpenNebula, and Vagrant}
+\cvlistitem{Continuous Integration and tools: Jenkins, Github.}
+\cvlistitem{CMake / GMake, ELK Stack, Grails, HLS and Smooth, Kafka, \LaTeXe, Markdown, RTSP, XSLT, Zookeeper}
 
 
 \end{document}
+
