Formatting of source file

--- a/anthony_oteri.tex
+++ b/anthony_oteri.tex
@@ -92,10 +92,10 @@
 
 \section{Summary}
 
-\cvitem{}
-{
-Seasoned software engineer with over 10 years professional experience designing and delivering enterprise class server software and APIs for Linux, Unix, and Windows environments.  Highly proficient in multiple languages and a variety of current technologies, covering a unique combination of creativity and analytic problem solving skills with the ability to evaluate requirements, design solutions, and deliver quality results.
-}
+	\cvitem{}
+	{
+		Seasoned software engineer with over 10 years professional experience designing and delivering enterprise class server software and APIs for Linux, Unix, and Windows environments.  Highly proficient in multiple languages and a variety of current	technologies, covering a unique combination of creativity and analytic problem solving skills with the ability to evaluate requirements, design solutions, and deliver quality	results.
+	}
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
@@ -103,63 +103,67 @@ Seasoned software engineer with over 10 years professional experience designing 
 
 \section{Work Experience}
 
-\cventry{2013--Present}{Edgeware Inc.}{Senior Software Engineer}{Stockholm, Sweden}{}
-{
-\begin{itemize}
-\item Member of cross-functional Agile development team responsible for enhancing and maintaining Edgeware's Distributed Video Delivery Network Solution.
-\item Focused primarily on the development of Convoy, a distributed, highly-available, content management, monitoring, and routing system written in Python. 
-\item Team lead, and lead developer for TV Analytics: a monitoring and analytics engine, API, and front-end for collecting and analyzing session, bandwidth, and user behavior, integrated with Elasticsearch and Kibana.
-\item Extended custom Linux kernel modules and services to support dynamic ad-replacement in VOD and catch-up content to deliver a targeted, personalized viewing experience to IPTV and OTT viewers.
-\item Product owner and lead developer for Edgeware's Multi-Protocol Gateway software which adapted various external and internal APIs, as well as performed customizable RTSP routing between clients and streaming video servers.
-\item Worked both remotely and on-site with customers around the globe to determine project requirements and deliverable and to propose viable solutions using Edgeware's technology stack.
-\item Maintained Edgeware's legacy Origin2 Management Software, which included traveling on-site with customers to provide in-person support.
-\end{itemize}
-}
+	\cventry{2013--Present}		{\textsc{Edgeware Inc.}}			{Senior Software Engineer}			{Stockholm, Sweden}	{}
+	{
+	\begin{itemize}
+		\item Member of cross-functional Agile development team responsible for enhancing andmaintaining Edgeware's Distributed Video Delivery Network Solution.
+		\item Focused primarily on the development of Convoy, a distributed, highly-available, content management, monitoring, and routing system written in Python. 
+		\item Team lead, and lead developer for TV Analytics: a monitoring and analytics engine, API, and front-end for collecting and analyzing session, bandwidth, and user behavior, integrated with Elasticsearch and Kibana.
+		\item Extended custom Linux kernel modules and services to support dynamic ad-replacement in VOD and catch-up content to deliver a targeted, personalized viewing experience to IPTV and OTT viewers.
+		\item Product owner and lead developer for Edgeware's Multi-Protocol Gateway software which adapted various external and internal APIs, as well as performed customizable RTSP routing between clients and streaming video servers.
+		\item Worked both remotely and on-site with customers around the globe to determine project requirements and deliverable and to propose viable solutions using Edgeware's technology stack.
+		\item Maintained Edgeware's legacy Origin2 Management Software, which included traveling on-site with customers to provide in-person support.
+	\end{itemize}
+	}
 
-%-----
-\cventry{2011--2013}{Nuance Communications, Inc.}{Senior JAVA Software Engineer}{Burlington, MA}{}
-{\begin{itemize}
-\item Member of the EditScript Server development team responsible for Dragon Medical 360 | eScription: A background speech recognition solution designed to fully integrate with the EHR and streamline clinical documentation for the large healthcare enterprise. 
-\item Worked closely with Quality Assurance team to model, profile, and performance test various clinician workflows, and to fix bottlenecks, which resulted in significant improvements in scalability and overall performance.
-\item Extended REST APIs to support Dragon Medical 360 | Mobile Recorder: An iPhone application allowing clinicians to search, dictate upon, and manage both inpatient and outpatient visits.
-%\item Enhanced inbound HL7 interface to support SIU message types to handle outpatient scheduling information.
-%\item Worked in Agile development team to deliver support for the Deferred Self-Edit Workflow, which allows clinicians to dictate, and subsequently edit and sign medical records from within the institution's EHR system.
-%\item Triage, fixed, and addressed Help Requests, Feature Requests, and Bug Reports from both external and internal groups.
-\item Authored multiple Component Specifications, Design Specifications, and Functional Specifications for various projects related to the EditScript Server.
-%\item Peer-reviewed code for bugs, inefficiencies, and adherence to company coding standards and guidelines.
-\end{itemize}
-}
 
-%-----
-\cventry{2008--2011}{Livewire Mobile, Inc.}{Senior Software Engineer}{Littleton, MA}{}
-{
-\begin{itemize}
-\item Responsible for developing and maintaining the full-track music service.
-\item Designed, integrated, developed, and tested core components of Mediadrome -- A direct-to-consumer storefront application service powered by Grails, which enables recording artists and music labels to sell digital media such as full-track music, ringtones, graphics, and videos as well as physical merchandise directly to their fans.
-%\item Lead engineer responsible for designing, developing, and overseeing a year-long migration process which successfully moved and consolidated over 90TB of live content with zero-downtime. 
-\item Member of the company's first Agile development team, designing and implementing a considerable portion of the next-generation, multi-content ingestion and aggregation system using J2EE, Spring MVC, Hibernate, XML, XPath, XSLT, and jBPM, as part of a new Integrated-Storefront product. 
-%\item Delivered a large portion of the first generation Infuse storefront by incorporating legacy WAP and Rich-Client server application with a content delivery platform contributed by a partner.
-\end{itemize}
-}
+	\cventry{2011--2013}	{\textsc{Nuance Communications, Inc.}}	{Senior JAVA Software Engineer}		{Burlington, MA}	{}
+	{
+	\begin{itemize}
+		\item Member of the EditScript Server development team responsible for Dragon Medical 360 | eScription: A background speech recognition solution designed to fully integrate with the EHR and streamline clinical documentation for the large healthcare enterprise. 
+		\item Worked closely with Quality Assurance team to model, profile, and performance test various clinician workflows, and to fix bottlenecks, which resulted in significant improvements in scalability and overall performance.
+		\item Extended REST APIs to support Dragon Medical 360 | Mobile Recorder: An iPhone application allowing clinicians to search, dictate upon, and manage both inpatient and outpatient visits.
+		%\item Enhanced inbound HL7 interface to support SIU message types to handle outpatient scheduling information.
+		%\item Worked in Agile development team to deliver support for the Deferred Self-Edit Workflow, which allows clinicians to dictate, and subsequently edit and sign medical records from within the institution's EHR system.
+		%\item Triage, fixed, and addressed Help Requests, Feature Requests, and Bug Reports from both external and internal groups.
+		\item Authored multiple Component Specifications, Design Specifications, and Functional Specifications for various projects related to the EditScript Server.
+		%\item Peer-reviewed code for bugs, inefficiencies, and adherence to company coding standards and guidelines.
+	\end{itemize}
+	}
 
-%-----
-\cventry{2005--2008}{NMS Communications, Inc.}{Engineer II}{Framingham, MA}{}
-{
-\begin{itemize}
-\item Technical lead for many projects related to the MyCaller Ringback Platform specializing in the areas of system and application services.
-%\item Aided in the design and development of the release-lab, responsible for source-control, compilation, packaging, and deployment of code for both Solaris and Linux environments.
-\item Minimized customer support requests by implementing a framework using Perl and XML for the automation of documented procedures including system installation, OS and package configuration, and software upgrade.
-\end{itemize}
-}
+	%-----
 
-%-----
-\cventry{2004--2005}{Funkitron, Inc.}{Programmer}{Boxford, MA}{}
-{
-\begin{itemize}
-\item Lead developer on ``Poker Superstars: Season I,'' a game targeted at commercial distribution on Microsoft Windows
-\item Enhanced AOL's popular Slingo suite of games by extending both client and server code to incorporate advertisements, and to bring outdated and neglected games into full production quality.
-\end{itemize}
-}
+	\cventry{2008--2011}	{\textsc{Livewire Mobile, Inc.}}		{Senior Software Engineer}				{Littleton, MA}		{}
+	{
+	\begin{itemize}
+		\item Responsible for developing and maintaining the full-track music service.
+		\item Designed, integrated, developed, and tested core components of Mediadrome -- A direct-to-consumer storefront application service powered by Grails, which enables recording artists and music labels to sell digital media such as full-track music, ringtones, graphics, and videos as well as physical merchandise directly to their fans.
+		%\item Lead engineer responsible for designing, developing, and overseeing a year-long migration process which successfully moved and consolidated over 90TB of live content with zero-downtime. 
+		\item Member of the company's first Agile development team, designing and implementing a considerable portion of the next-generation, multi-content ingestion and aggregation system using J2EE, Spring MVC, Hibernate, XML, XPath, XSLT, and jBPM, as part of a new Integrated-Storefront product. 
+		%\item Delivered a large portion of the first generation Infuse storefront by incorporating legacy WAP and Rich-Client server application with a content delivery platform contributed by a partner.
+	\end{itemize}
+	}
+
+	%-----
+
+	\cventry{2005--2008}	{\textsc{NMS Communications, Inc.}}		{Engineer II}							{Framingham, MA}	{}
+	{
+	\begin{itemize}
+		\item Technical lead for many projects related to the MyCaller Ringback Platform specializing in the areas of system and application services.
+		%\item Aided in the design and development of the release-lab, responsible for source-control, compilation, packaging, and deployment of code for both Solaris and Linux environments.
+		\item Minimized customer support requests by implementing a framework using Perl and XML for the automation of documented procedures including system installation, OS and package configuration, and software upgrade.
+	\end{itemize}
+	}
+
+	%-----
+
+	\cventry{2004--2005}	{\textsc{Funkitron, Inc.}}				{Programmer}							{Boxford, MA}		{}
+	{
+	\begin{itemize}
+		\item Lead developer on ``Poker Superstars: Season I,'' a game targeted at commercial distribution on Microsoft Windows
+		\item Enhanced AOL's popular Slingo suite of games by extending both client and server code to incorporate advertisements, and to bring outdated and neglected games into full production quality.
+	\end{itemize}
+	}
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
@@ -167,18 +171,22 @@ Seasoned software engineer with over 10 years professional experience designing 
 
 \section{Education}
 
-\cventry{2004--2010}{M.S. Electrical Engineering}{Worcester Polytechnic Institute}{Worcester, MA}{}
-{Concentration in Computer Engineering}
+	\cventry{2004--2010}	{M.S. Electrical Engineering}	{Worcester Polytechnic Institute}	{Worcester, MA}		{}
+	{
+		Concentration in Computer Engineering
+	}
 
-\cventry{2000--2004}{B.S. Computer Science}{Worcester Polytechnic Institute}{Worcester, MA}{}
-{Minor in Electrical and Computer Engineering}
+	\cventry{2000--2004}	{B.S. Computer Science}			{Worcester Polytechnic Institute}	{Worcester, MA}		{}
+	{
+		Minor in Electrical and Computer Engineering
+	}
 
 \subsection{Projects}
 
-\cventry{2003--2004}{Applying Cryptography to Physical Security}{}{}{}
-{
-Designed and implemented an MSP-430 based door lock controller and software key management system using C++ and .NET, using Smart Cards and a custom viral-networking protocol secured with AES-256.
-}
+	\cventry{2003--2004}	{Applying Cryptography to Physical Security}										{}{}{}
+	{
+		Designed and implemented an MSP-430 based door lock controller and software key management system using C++ and .NET, using Smart Cards and a custom viral-networking protocol secured with AES-256.
+	}
 
 %----------------------------------------------------------------------------------------
 %	TECHNICAL SKILLS SECTION
@@ -186,24 +194,26 @@ Designed and implemented an MSP-430 based door lock controller and software key 
 
 \section{Technical Skills}
 
-\cvitem{Software Development}{Solid experience in all aspects of the software development life-cycle including: Agile, component-based software engineering, test-driven development, object-oriented design, software architecture, technical documentation, quality assurance, hosting deployment, and embedded systems development}
+	\cvitem
+	{Software Development}
+	{
+		Solid experience in all aspects of the software development life-cycle including: Agile, component-based software engineering, test-driven development, object-oriented design, software architecture, technical documentation, quality assurance, hosting deployment, and embedded systems development
+	}
 
 \subsection{Programming Languages}
+%---------------------------------
 
-\cvlistdoubleitem{Python, 2 and 3}{Java (EJB, Spring MVC, Hibernate)}
-\cvlistdoubleitem{C and C++}{Perl}
-\cvlistdoubleitem{Bash / Shell Scripting}{Some experience with Groovy, JavaScript, C\#, PHP.}
+	\cvlistdoubleitem{Python, 2 and 3}							{Java (EJB, Spring MVC, Hibernate)}
+	\cvlistdoubleitem{C and C++}								{Perl}
+	\cvlistdoubleitem{Bash / Shell Scripting}					{Some experience with Groovy, JavaScript, C\#, PHP.}
 
 \subsection{Software and Tooling}
+%--------------------------------
 
-\cvlistitem{Red Hat and Debian based Linux}
-\cvlistitem{Version Control: Git, Subversion, CVS, and Perforce}
-\cvlistitem{Linux Containers Frameworks: Docker and LXC}
-\cvlistitem{Databases: MySQL / MariaDB, Microsoft SQL Server, Elasticsearch, Cassandra}
-\cvlistitem{Virtualization platforms and tools: KVM, VMware, OpenStack, VirtualBox, OpenNebula, and Vagrant}
-\cvlistitem{Continuous Integration and tools: Jenkins, Github.}
-\cvlistitem{CMake / GMake, ELK Stack, Grails, HLS and Smooth, Kafka, \LaTeXe, Markdown, RTSP, XSLT, Zookeeper}
+	\cvlistdoubleitem{Linux}														{Git, Subversion, CVS, and Perforce}
+	\cvlistdoubleitem{Docker and LXC}												{MySQL / MariaDB, Microsoft SQL Server, Elasticsearch, Cassandra}
+	\cvlistdoubleitem{KVM, VMware, OpenStack, VirtualBox, OpenNebula, and Vagrant}	{Jenkins, Github.}
+	\cvlistitem{CMake / GMake, ELK Stack, Grails, HLS and Smooth, Kafka, \LaTeXe, Markdown, RTSP, XSLT, Zookeeper}
 
 
 \end{document}
-
